--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,17 @@
 @import './base/settings';
 @import './base/base';
-//under here load the partials
+@import './components/box-layout';
+@import './components/btn-layout';
+@import './components/header';
+@import './components/content-container';
+@import './components/page-header';
+@import './components/input-group';
+@import './components/inputs';
+@import './components/form';
+@import './components/visibility';
+@import './components/list';
+@import './components/loader';
+
+
+
 
